--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,8 @@ body {
 
 body,
 button,
-input {
+input,
+select {
 	margin: 0;
 	font-family: Figtree;
 }
@@ -100,7 +101,7 @@ input {
 	@apply w-full h-[660px] overflow-auto;
 }
 .vloger-head {
-	@apply sticky top-0 z-10 bg-white;
+	@apply sticky top-0 z-10 bg-white flex items-center;
 }
 .land-a span {
 	@apply text-[#0f0f0f] text-[60px] font-bold;
@@ -141,7 +142,7 @@ iframe.code {
 	@apply absolute z-10;
 }
 .test-vloger {
-	@apply bg-cover max-w-[500px] m-auto h-auto relative z-10;
+	@apply bg-cover max-w-[500px] m-auto h-auto relative z-10 pointer-events-none;
 	transition: transform 0.1s ease;
 	transform-style: preserve-3d;
 	will-change: transform;
@@ -159,6 +160,207 @@ iframe.code {
 	@apply text-base font-medium text-[rgba(15,15,15,0.7)] pt-[7px];
 }
 
+/* progress bar section */
+.earn-section {
+	@apply bg-[#290038] rounded-[40px] mx-[26px] mt-[60px];
+}
+.earn-main {
+	@apply flex gap-[100px];
+}
+.earn-money-section {
+	@apply m-auto w-full text-center py-[107px] pl-[128px];
+}
+.earn-money-section h2 {
+	@apply text-[123.4px] font-extrabold text-white leading-[197.5px] flex items-baseline justify-center;
+}
+.rupee {
+	@apply text-[88.2px] font-extrabold text-white leading-[141.1px];
+}
+.earn-money-section p {
+	@apply text-[rgba(255,255,255,0.4)] font-medium text-[13px] pt-3 w-[308px] m-auto;
+}
+.earn-btn {
+	@apply mt-[38px] ml-0 font-bold;
+}
+.earn {
+	@apply text-[60px] text-white font-bold leading-[60px];
+}
+.emoji {
+	@apply text-[44px] font-bold leading-[44px];
+}
+.earn-rich {
+	@apply w-full pt-[100px] pr-[88px];
+}
+.earn-rich h3 {
+	@apply text-[40px] text-white font-bold leading-[64px];
+}
+.earn-rich p {
+	@apply text-base text-[rgba(255,255,255,0.85)] font-medium leading-[25.5px] pt-[7px];
+}
+.earn-rich span {
+	@apply text-[18px] text-white font-bold leading-[28.8px] pt-[48px] block;
+}
+.range-slider {
+	@apply relative mt-[15px] flex items-center gap-[24px];
+}
+.earn-k {
+	@apply text-[18px] font-medium text-[rgba(255,255,255,0.4)];
+}
+#range {
+	@apply w-full bg-[rgba(255,255,255,0.2)] rounded-[10px] focus:outline-none;
+	-webkit-appearance: none;
+}
+
+#range::-webkit-slider-runnable-track {
+	@apply w-full h-2.5 cursor-pointer rounded-[20px];
+	animate: 0.2s;
+	background: linear-gradient(
+		90deg,
+		#ffa42b var(--range-progress),
+		rgba(255, 255, 255, 0.2) var(--range-progress)
+	);
+}
+#range::-webkit-slider-thumb {
+	@apply rounded-full bg-white h-6 w-6 cursor-pointer;
+	-webkit-appearance: none;
+	transform: translateY(calc(-50% + 5px));
+}
+#tooltip {
+	@apply absolute -bottom-3;
+}
+#tooltip span {
+	position: absolute;
+	text-align: center;
+	display: block;
+	padding-top: 0;
+	color: rgba(255, 255, 255, 0.85);
+	font-size: 14px;
+	font-weight: 500;
+	transform: translate(-50%, 0);
+	line-height: 26px;
+}
+#range2 {
+	@apply w-full bg-[rgba(255,255,255,0.2)] rounded-[10px] focus:outline-none;
+	-webkit-appearance: none;
+}
+
+#range2::-webkit-slider-runnable-track {
+	@apply w-full h-2.5 cursor-pointer rounded-[20px];
+	animate: 0.2s;
+	background: linear-gradient(
+		90deg,
+		#ffa42b var(--range-progress),
+		rgba(255, 255, 255, 0.2) var(--range-progress)
+	);
+}
+#range2::-webkit-slider-thumb {
+	@apply rounded-full bg-white h-6 w-6 cursor-pointer;
+	-webkit-appearance: none;
+	transform: translateY(calc(-50% + 5px));
+}
+#tooltip2 {
+	@apply absolute -bottom-3;
+}
+#tooltip2 span {
+	position: absolute;
+	text-align: center;
+	display: block;
+	padding-top: 0;
+	color: rgba(255, 255, 255, 0.85);
+	font-size: 14px;
+	font-weight: 500;
+	transform: translate(-50%, 0);
+	line-height: 26px;
+}
+.rangein {
+	@apply mt-[32px];
+}
+
+/* frequently ansked question */
+.lan-asked {
+	@apply bg-[#fbe9d5] px-[100px] mt-[48px] pb-[48px];
+}
+.pick-askme {
+	@apply flex;
+}
+.pic-le {
+	@apply pt-[162px] w-full;
+}
+.pic-le img {
+	@apply rounded-full w-[200px] h-[200px] object-cover;
+}
+.pic-le span {
+	@apply text-[24px] font-semibold text-[#0f0f0f] pt-[36px] block;
+}
+.pic-le h4 {
+	@apply text-[60px] font-extrabold text-[#0f0f0f] pt-3 leading-[66px];
+}
+.pick-re {
+	@apply pt-20 w-full;
+}
+.accordion-heading {
+	@apply text-[#0f0f0f] text-xl border-b border-[rgba(15,15,15,0.1)] px-0 py-4 font-bold cursor-pointer;
+}
+.accordion-heading::before {
+	@apply align-middle inline-block border-t-[7px] border-t-[rgba(15,15,15,0.45)] border-l-[7px] border-l-transparent border-r-[7px] border-r-transparent float-right mt-[14px];
+	content: "";
+	transform: rotate(0);
+	transition: all 0.5s;
+}
+.active.accordion-heading::before {
+	transform: rotate(-180deg);
+}
+.not-active.accordion-heading::before {
+	transform: rotate(0deg);
+}
+.accordion-content {
+	@apply hidden px-0 py-4 text-[rgba(15,15,15,0.7)] text-base leading-[22.4px] font-medium;
+}
+.accordion-content p {
+	@apply mt-[30px];
+}
+.accordion-content a {
+	@apply text-[#f5507d];
+}
+
+/* footer section  */
+
+.pic-footer {
+	@apply bg-[#222222] mt-[100px] rounded-[20px] px-[48px] py-10;
+}
+.lan-footer {
+	@apply flex items-center;
+}
+.footer-by span {
+	@apply text-[rgba(255,255,255,0.4)] text-[15px] font-semibold;
+}
+.footer-social {
+	@apply flex items-center mt-[36px] gap-4 h-[56px];
+}
+.footer-social img {
+	@apply bg-[#2c2c2c] p-2 rounded-full cursor-pointer;
+}
+.footer-social img:hover {
+	animation-name: footer-social;
+	animation-duration: 1s;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+}
+@keyframes footer-social {
+	25% {
+		transform: scale(1.1);
+	}
+
+	75% {
+		transform: scale(0.9);
+	}
+}
+.footer-policy {
+	@apply ml-auto flex gap-[30px];
+}
+.footer-policy span {
+	@apply text-[rgba(255,255,255,0.5)] font-semibold text-[13px] cursor-pointer;
+}
 /* h1 animation zoom-in */
 .zoo-in {
 	animation-duration: 3s;
@@ -322,3 +524,65 @@ iframe.code {
 .land-a::-webkit-scrollbar-thumb:hover {
 	background: #555;
 }
+
+.myDiv {
+	display: none;
+	text-align: center;
+}
+.myDiv img {
+	margin: 0 auto;
+}
+.myDiv span {
+	text-align: center;
+	background: #ffdede;
+	padding: 6px 10px;
+	display: block;
+	width: 100px;
+	border: 1px solid #d47c7c;
+	margin: 8px auto;
+}
+.selectParent {
+	@apply bg-[rgba(26,97,233,0.1)] px-[32px] cursor-pointer py-4 text-[#1a61e9] text-[60px] font-bold rounded-full ml-3 leading-[66px];
+}
+
+.selectParent select {
+	text-indent: 1px;
+	text-overflow: "";
+	/* width: 100px; */
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	/* padding: 2px 2px 2px 2px;
+	border: none; */
+	background: transparent
+		url("http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png")
+		no-repeat 60px center;
+	outline: none;
+	background-position: calc(100% - 3px) center;
+	cursor: pointer;
+}
+option {
+	color: #0f0f0f;
+	font-size: 40px;
+	padding: 10px 11px 10px 11px;
+	border: 1px solid #dfe3eb;
+	border-radius: 10px;
+	font-weight: 500;
+	width: 100%;
+	cursor: pointer;
+}
+/* #showOne {
+	color: red;
+	border: 1px solid red;
+	padding: 10px;
+}
+#showTwo {
+	color: green;
+	border: 1px solid green;
+	padding: 10px;
+}
+#showThree {
+	color: blue;
+	border: 1px solid blue;
+	padding: 10px;
+} */
