--- a/public/css/style.css
+++ b/public/css/style.css
@@ -98,7 +98,7 @@ select {
 	@apply flex w-full gap-10;
 }
 .land-a {
-	@apply w-full h-[660px] overflow-auto;
+	@apply w-full h-[660px] overflow-auto relative;
 }
 .vloger-head {
 	@apply sticky top-0 z-10 bg-white flex items-center;
@@ -274,6 +274,115 @@ iframe.code {
 }
 .rangein {
 	@apply mt-[32px];
+}
+
+/* Carousel Section */
+
+.pick-carousel-sec {
+	@apply bg-[#0f0f0f] mx-[26px] mt-[28px] mb-[48px] rounded-[40px] overflow-hidden;
+}
+.pick-caro {
+	@apply pl-[74px] flex;
+}
+.pick-influ {
+	@apply pt-20 pb-[248px];
+}
+.pick-influ h3 {
+	@apply text-[60px] font-extrabold text-white leading-[66px] w-[579px];
+}
+.pick-influ span {
+	@apply text-[#f5507d];
+}
+.pick-influ p {
+	@apply text-[24px] font-semibold text-white leading-[33.6px] pt-8 w-[548px];
+}
+.pick-slider {
+	@apply w-full;
+}
+.slide-track {
+	@apply flex;
+	animation: scroll 80s linear infinite;
+}
+
+.slide-track2 {
+	@apply flex;
+	animation: scroll 100s linear infinite;
+	animation-direction: reverse;
+}
+.slide-track:hover {
+	-webkit-animation-play-state: paused;
+	-moz-animation-play-state: paused;
+	-o-animation-play-state: paused;
+	animation-play-state: paused;
+	cursor: pointer;
+}
+.slide-track2:hover {
+	-webkit-animation-play-state: paused;
+	-moz-animation-play-state: paused;
+	-o-animation-play-state: paused;
+	animation-play-state: paused;
+	cursor: pointer;
+}
+@keyframes scroll {
+	0% {
+		transform: translateX(0);
+	}
+
+	100% {
+		transform: translateX(calc(-250px * 10));
+	}
+}
+@keyframes scroll2 {
+	0% {
+		transform: translateX(0);
+	}
+
+	100% {
+		transform: translateX(calc(250px * 10));
+	}
+}
+.slider {
+	@apply relative h-auto m-auto;
+	transform: rotate(-35deg);
+}
+.slider-second {
+	@apply mt-24;
+}
+.flip-card {
+	@apply bg-white w-[250px] h-[250px] rounded-full mx-2;
+	perspective: 1000px;
+}
+
+.flip-card-inner {
+	@apply relative w-[250px] h-full text-center;
+	transition: transform 0.6s;
+	transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+	transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+	@apply absolute w-[250px] h-[250px] rounded-full;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+}
+.flip-card-front img {
+	@apply w-[250px] h-[250px] rounded-full;
+}
+
+.flip-card-back {
+	@apply bg-white rounded-full cursor-pointer flex items-center flex-col justify-center;
+	transform: rotateY(180deg);
+}
+
+.flip-card-back p {
+	@apply text-[#F5507D] font-normal text-sm;
+}
+.flip-card-back h3 {
+	@apply text-[#0f0f0f] font-bold text-lg truncate max-w-[180px];
 }
 
 /* frequently ansked question */
@@ -586,3 +695,139 @@ option {
 	border: 1px solid blue;
 	padding: 10px;
 } */
+.dropdown-el {
+	margin-top: 20vh;
+	min-width: 12em;
+	position: relative;
+	display: inline-block;
+	margin-right: 1em;
+	min-height: 2em;
+	max-height: 2em;
+	overflow: hidden;
+	top: 0.5em;
+	cursor: pointer;
+	text-align: left;
+	white-space: nowrap;
+	color: #444;
+	outline: none;
+	border: 0.06em solid transparent;
+	border-radius: 1em;
+	background-color: #cde4f5;
+	transition: 0.3s all ease-in-out;
+}
+.dropdown-el input:focus + label {
+	background: #def;
+}
+.dropdown-el input {
+	width: 1px;
+	height: 1px;
+	display: inline-block;
+	position: absolute;
+	opacity: 0.01;
+}
+.dropdown-el label {
+	border-top: 0.06em solid #d9d9d9;
+	display: block;
+	height: 2em;
+	line-height: 2em;
+	padding-left: 1em;
+	padding-right: 3em;
+	cursor: pointer;
+	position: relative;
+	transition: 0.3s color ease-in-out;
+}
+.dropdown-el label:nth-child(2) {
+	margin-top: 2em;
+	border-top: 0.06em solid #d9d9d9;
+}
+.dropdown-el input:checked + label {
+	display: block;
+	border-top: none;
+	position: absolute;
+	top: 0;
+	width: 100%;
+}
+.dropdown-el input:checked + label:nth-child(2) {
+	margin-top: 0;
+	position: relative;
+}
+.dropdown-el::after {
+	content: "";
+	position: absolute;
+	right: 0.8em;
+	top: 0.9em;
+	border: 0.3em solid #3694d7;
+	border-color: #3694d7 transparent transparent transparent;
+	transition: 0.4s all ease-in-out;
+}
+.dropdown-el.expanded {
+	border: 0.06em solid #3694d7;
+	background: #fff;
+	border-radius: 0.25em;
+	padding: 0;
+	box-shadow: rgba(0, 0, 0, 0.1) 3px 3px 5px 0px;
+	max-height: 15em;
+}
+.dropdown-el.expanded label {
+	border-top: 0.06em solid #d9d9d9;
+}
+.dropdown-el.expanded label:hover {
+	color: #3694d7;
+}
+.dropdown-el.expanded input:checked + label {
+	color: #3694d7;
+}
+.dropdown-el.expanded::after {
+	transform: rotate(-180deg);
+	top: 0.55em;
+}
+.influ-dropsec {
+	display: flex;
+	background: rgba(26, 97, 233, 0.1);
+	cursor: pointer;
+	border-radius: 70px;
+	align-items: center;
+	margin-left: 20px;
+	padding-right: 10px;
+}
+.influ-dropsec img {
+	@apply w-[70px] h-24;
+}
+.influ-vlog {
+	font-size: 60px;
+	border-radius: 50px;
+	line-height: 66px;
+	padding: 16px 10px 16px 32px;
+	cursor: pointer;
+	font-weight: 700;
+	color: #1a61e9;
+}
+.infludrop-btn {
+	padding: 4px 6px;
+	border-radius: 12px;
+	box-shadow: 4px 4px 20px 0 rgb(15 15 15 / 10%), 0 0 4px 0 rgb(51 35 77 / 5%);
+	background-color: #fff;
+	width: 312px;
+	margin-top: 4px;
+	position: absolute;
+	left: 30%;
+}
+#select0,
+#select1,
+#select2,
+#select3 {
+	font-size: 20px;
+	font-weight: 600;
+	padding-top: 8px;
+	padding-bottom: 8px;
+	padding-left: 12px;
+	cursor: pointer;
+}
+#select0:hover,
+#select1:hover,
+#select2:hover,
+#select3:hover {
+	padding: 8px 12px;
+	border-radius: 6px;
+	background-color: #fbe9d5;
+}
