--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -804,6 +804,7 @@ select {
 }
 
 .land-a {
+  position: relative;
   height: 660px;
   width: 100%;
   overflow: auto;
@@ -1180,6 +1181,205 @@ iframe.code {
 
 .rangein {
   margin-top: 32px;
+}
+
+/* Carousel Section */
+
+.pick-carousel-sec {
+  margin-left: 26px;
+  margin-right: 26px;
+  margin-top: 28px;
+  margin-bottom: 48px;
+  overflow: hidden;
+  border-radius: 40px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 15 15 / var(--tw-bg-opacity));
+}
+
+.pick-caro {
+  display: flex;
+  padding-left: 74px;
+}
+
+.pick-influ {
+  padding-top: 5rem;
+  padding-bottom: 248px;
+}
+
+.pick-influ h3 {
+  width: 579px;
+  font-size: 60px;
+  font-weight: 800;
+  line-height: 66px;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.pick-influ span {
+  --tw-text-opacity: 1;
+  color: rgb(245 80 125 / var(--tw-text-opacity));
+}
+
+.pick-influ p {
+  width: 548px;
+  padding-top: 2rem;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 33.6px;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.pick-slider {
+  width: 100%;
+}
+
+.slide-track {
+  display: flex;
+  -webkit-animation: scroll 80s linear infinite;
+          animation: scroll 80s linear infinite;
+}
+
+.slide-track2 {
+  display: flex;
+  -webkit-animation: scroll 100s linear infinite;
+          animation: scroll 100s linear infinite;
+  animation-direction: reverse;
+}
+
+.slide-track:hover {
+  -webkit-animation-play-state: paused;
+  animation-play-state: paused;
+  cursor: pointer;
+}
+
+.slide-track2:hover {
+  -webkit-animation-play-state: paused;
+  animation-play-state: paused;
+  cursor: pointer;
+}
+
+@-webkit-keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(calc(-250px * 10));
+  }
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(calc(-250px * 10));
+  }
+}
+
+@-webkit-keyframes scroll2 {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(calc(250px * 10));
+  }
+}
+
+@keyframes scroll2 {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(calc(250px * 10));
+  }
+}
+
+.slider {
+  position: relative;
+  margin: auto;
+  height: auto;
+  transform: rotate(-35deg);
+}
+
+.slider-second {
+  margin-top: 6rem;
+}
+
+.flip-card {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  height: 250px;
+  width: 250px;
+  border-radius: 9999px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: relative;
+  height: 100%;
+  width: 250px;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, 
+.flip-card-back {
+  position: absolute;
+  height: 250px;
+  width: 250px;
+  border-radius: 9999px;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front img {
+  height: 250px;
+  width: 250px;
+  border-radius: 9999px;
+}
+
+.flip-card-back {
+  display: flex;
+  cursor: pointer;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 9999px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  transform: rotateY(180deg);
+}
+
+.flip-card-back p {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 400;
+  --tw-text-opacity: 1;
+  color: rgb(245 80 125 / var(--tw-text-opacity));
+}
+
+.flip-card-back h3 {
+  max-width: 180px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(15 15 15 / var(--tw-text-opacity));
 }
 
 /* frequently ansked question */
@@ -1739,3 +1939,159 @@ option {
 	border: 1px solid blue;
 	padding: 10px;
 } */
+
+.dropdown-el {
+  margin-top: 20vh;
+  min-width: 12em;
+  position: relative;
+  display: inline-block;
+  margin-right: 1em;
+  min-height: 2em;
+  max-height: 2em;
+  overflow: hidden;
+  top: 0.5em;
+  cursor: pointer;
+  text-align: left;
+  white-space: nowrap;
+  color: #444;
+  outline: none;
+  border: 0.06em solid transparent;
+  border-radius: 1em;
+  background-color: #cde4f5;
+  transition: 0.3s all ease-in-out;
+}
+
+.dropdown-el input:focus + label {
+  background: #def;
+}
+
+.dropdown-el input {
+  width: 1px;
+  height: 1px;
+  display: inline-block;
+  position: absolute;
+  opacity: 0.01;
+}
+
+.dropdown-el label {
+  border-top: 0.06em solid #d9d9d9;
+  display: block;
+  height: 2em;
+  line-height: 2em;
+  padding-left: 1em;
+  padding-right: 3em;
+  cursor: pointer;
+  position: relative;
+  transition: 0.3s color ease-in-out;
+}
+
+.dropdown-el label:nth-child(2) {
+  margin-top: 2em;
+  border-top: 0.06em solid #d9d9d9;
+}
+
+.dropdown-el input:checked + label {
+  display: block;
+  border-top: none;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.dropdown-el input:checked + label:nth-child(2) {
+  margin-top: 0;
+  position: relative;
+}
+
+.dropdown-el::after {
+  content: "";
+  position: absolute;
+  right: 0.8em;
+  top: 0.9em;
+  border: 0.3em solid #3694d7;
+  border-color: #3694d7 transparent transparent transparent;
+  transition: 0.4s all ease-in-out;
+}
+
+.dropdown-el.expanded {
+  border: 0.06em solid #3694d7;
+  background: #fff;
+  border-radius: 0.25em;
+  padding: 0;
+  box-shadow: rgba(0, 0, 0, 0.1) 3px 3px 5px 0px;
+  max-height: 15em;
+}
+
+.dropdown-el.expanded label {
+  border-top: 0.06em solid #d9d9d9;
+}
+
+.dropdown-el.expanded label:hover {
+  color: #3694d7;
+}
+
+.dropdown-el.expanded input:checked + label {
+  color: #3694d7;
+}
+
+.dropdown-el.expanded::after {
+  transform: rotate(-180deg);
+  top: 0.55em;
+}
+
+.influ-dropsec {
+  display: flex;
+  background: rgba(26, 97, 233, 0.1);
+  cursor: pointer;
+  border-radius: 70px;
+  align-items: center;
+  margin-left: 20px;
+  padding-right: 10px;
+}
+
+.influ-dropsec img {
+  height: 6rem;
+  width: 70px;
+}
+
+.influ-vlog {
+  font-size: 60px;
+  border-radius: 50px;
+  line-height: 66px;
+  padding: 16px 10px 16px 32px;
+  cursor: pointer;
+  font-weight: 700;
+  color: #1a61e9;
+}
+
+.infludrop-btn {
+  padding: 4px 6px;
+  border-radius: 12px;
+  box-shadow: 4px 4px 20px 0 rgb(15 15 15 / 10%), 0 0 4px 0 rgb(51 35 77 / 5%);
+  background-color: #fff;
+  width: 312px;
+  margin-top: 4px;
+  position: absolute;
+  left: 30%;
+}
+
+#select0,
+#select1,
+#select2,
+#select3 {
+  font-size: 20px;
+  font-weight: 600;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 12px;
+  cursor: pointer;
+}
+
+#select0:hover,
+#select1:hover,
+#select2:hover,
+#select3:hover {
+  padding: 8px 12px;
+  border-radius: 6px;
+  background-color: #fbe9d5;
+}
