--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,7 +51,7 @@ select {
 	@apply flex items-center justify-center gap-3 mt-[48px] pb-[64px];
 }
 .profile-input {
-	@apply w-[380px] border-solid border-[rgba(255,255,255,0.5)] rounded-full py-5 px-5 border;
+	@apply w-[380px] border-solid border-[rgba(255,255,255,0.5)] rounded-full pt-5 pb-0.5 px-5 border;
 }
 .profile-input span {
 	@apply text-[rgba(255,255,255,0.35)] font-semibold text-base;
@@ -64,6 +64,9 @@ select {
 }
 ::placeholder {
 	color: rgba(255, 255, 255, 0.5);
+}
+.int-focu {
+	@apply pt-[18px] pl-5 border-solid rounded-full border-[#0f0f0f] ml-[-19px] mr-[-18px] mt-[-19px] pb-5;
 }
 
 /* section 2 body */
@@ -98,7 +101,7 @@ select {
 	@apply flex w-full gap-10;
 }
 .land-a {
-	@apply w-full h-[660px] overflow-auto relative;
+	@apply w-full h-[580px] overflow-auto relative;
 }
 .vloger-head {
 	@apply sticky top-0 z-10 bg-white flex items-center;
@@ -106,11 +109,34 @@ select {
 .land-a span {
 	@apply text-[#0f0f0f] text-[60px] font-bold;
 }
-.land-a button {
-	@apply bg-[rgba(26,97,233,0.1)] px-[32px] py-4 text-[#1a61e9] text-[60px] font-bold rounded-full ml-3 leading-[66px];
+
+.influ-dropsec {
+	@apply flex bg-[rgba(26,97,233,0.1)] cursor-pointer rounded-[70px] items-center ml-5 pr-2.5;
 }
+.influ-dropsec img {
+	@apply w-[60px] h-20;
+}
+.influ-vlog {
+	@apply text-[30px] rounded-[50px] pr-2.5 pl-[32px] cursor-pointer font-bold text-[#1a61e9];
+}
+.infludrop-btn {
+	@apply py-1 px-1.5 rounded-[12px] bg-white w-[312px] mt-1 absolute left-[30%] top-[88px] shadow-mf;
+}
+#select0,
+#select1,
+#select2,
+#select3 {
+	@apply text-xl font-semibold py-2 pl-3 cursor-pointer;
+}
+#select0:hover,
+#select1:hover,
+#select2:hover,
+#select3:hover {
+	@apply py-2 px-3 rounded-[6px] bg-[#fbe9d5];
+}
+
 .land-a p {
-	@apply text-2xl pt-[32px] font-semibold text-[#0f0f0f];
+	@apply text-2xl font-semibold text-[#0f0f0f] sticky top-[100px];
 }
 
 /* right side image */
@@ -118,7 +144,7 @@ select {
 	@apply bg-[#ffa42b] rounded-[40px] w-full relative;
 }
 .land-vloger img {
-	@apply m-auto z-10;
+	@apply m-auto z-10 h-[695px];
 }
 iframe.code {
 	@apply block w-1 h-1 min-w-full min-h-[690px] border-none;
@@ -157,7 +183,7 @@ iframe.code {
 	@apply text-[40px] font-bold text-[#0f0f0f];
 }
 .land-lin p {
-	@apply text-base font-medium text-[rgba(15,15,15,0.7)] pt-[7px];
+	@apply text-base font-medium text-[rgba(15,15,15,0.7)] pt-[7px] max-w-[400px];
 }
 
 /* progress bar section */
@@ -201,10 +227,17 @@ iframe.code {
 	@apply text-[18px] text-white font-bold leading-[28.8px] pt-[48px] block;
 }
 .range-slider {
-	@apply relative mt-[15px] flex items-center gap-[24px];
+	@apply relative mt-[15px] gap-[24px];
 }
 .earn-k {
 	@apply text-[18px] font-medium text-[rgba(255,255,255,0.4)];
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	left: -10%;
+}
+.earn-m {
+	left: 102%;
 }
 #range {
 	@apply w-full bg-[rgba(255,255,255,0.2)] rounded-[10px] focus:outline-none;
@@ -379,10 +412,10 @@ iframe.code {
 }
 
 .flip-card-back p {
-	@apply text-[#F5507D] font-normal text-sm;
+	@apply text-[#F5507D] font-medium text-xl;
 }
 .flip-card-back h3 {
-	@apply text-[#0f0f0f] font-bold text-lg truncate max-w-[180px];
+	@apply text-[#0f0f0f] font-bold text-xl truncate max-w-[180px];
 }
 
 /* frequently ansked question */
@@ -498,7 +531,7 @@ iframe.code {
 	background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
-	-webkit-animation: hue 10s infinite linear;
+	-webkit-animation: hue 4s infinite linear;
 }
 
 @-webkit-keyframes hue {
@@ -632,202 +665,4 @@ iframe.code {
 
 .land-a::-webkit-scrollbar-thumb:hover {
 	background: #555;
-}
-
-.myDiv {
-	display: none;
-	text-align: center;
-}
-.myDiv img {
-	margin: 0 auto;
-}
-.myDiv span {
-	text-align: center;
-	background: #ffdede;
-	padding: 6px 10px;
-	display: block;
-	width: 100px;
-	border: 1px solid #d47c7c;
-	margin: 8px auto;
-}
-.selectParent {
-	@apply bg-[rgba(26,97,233,0.1)] px-[32px] cursor-pointer py-4 text-[#1a61e9] text-[60px] font-bold rounded-full ml-3 leading-[66px];
-}
-
-.selectParent select {
-	text-indent: 1px;
-	text-overflow: "";
-	/* width: 100px; */
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	appearance: none;
-	/* padding: 2px 2px 2px 2px;
-	border: none; */
-	background: transparent
-		url("http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png")
-		no-repeat 60px center;
-	outline: none;
-	background-position: calc(100% - 3px) center;
-	cursor: pointer;
-}
-option {
-	color: #0f0f0f;
-	font-size: 40px;
-	padding: 10px 11px 10px 11px;
-	border: 1px solid #dfe3eb;
-	border-radius: 10px;
-	font-weight: 500;
-	width: 100%;
-	cursor: pointer;
-}
-/* #showOne {
-	color: red;
-	border: 1px solid red;
-	padding: 10px;
-}
-#showTwo {
-	color: green;
-	border: 1px solid green;
-	padding: 10px;
-}
-#showThree {
-	color: blue;
-	border: 1px solid blue;
-	padding: 10px;
-} */
-.dropdown-el {
-	margin-top: 20vh;
-	min-width: 12em;
-	position: relative;
-	display: inline-block;
-	margin-right: 1em;
-	min-height: 2em;
-	max-height: 2em;
-	overflow: hidden;
-	top: 0.5em;
-	cursor: pointer;
-	text-align: left;
-	white-space: nowrap;
-	color: #444;
-	outline: none;
-	border: 0.06em solid transparent;
-	border-radius: 1em;
-	background-color: #cde4f5;
-	transition: 0.3s all ease-in-out;
-}
-.dropdown-el input:focus + label {
-	background: #def;
-}
-.dropdown-el input {
-	width: 1px;
-	height: 1px;
-	display: inline-block;
-	position: absolute;
-	opacity: 0.01;
-}
-.dropdown-el label {
-	border-top: 0.06em solid #d9d9d9;
-	display: block;
-	height: 2em;
-	line-height: 2em;
-	padding-left: 1em;
-	padding-right: 3em;
-	cursor: pointer;
-	position: relative;
-	transition: 0.3s color ease-in-out;
-}
-.dropdown-el label:nth-child(2) {
-	margin-top: 2em;
-	border-top: 0.06em solid #d9d9d9;
-}
-.dropdown-el input:checked + label {
-	display: block;
-	border-top: none;
-	position: absolute;
-	top: 0;
-	width: 100%;
-}
-.dropdown-el input:checked + label:nth-child(2) {
-	margin-top: 0;
-	position: relative;
-}
-.dropdown-el::after {
-	content: "";
-	position: absolute;
-	right: 0.8em;
-	top: 0.9em;
-	border: 0.3em solid #3694d7;
-	border-color: #3694d7 transparent transparent transparent;
-	transition: 0.4s all ease-in-out;
-}
-.dropdown-el.expanded {
-	border: 0.06em solid #3694d7;
-	background: #fff;
-	border-radius: 0.25em;
-	padding: 0;
-	box-shadow: rgba(0, 0, 0, 0.1) 3px 3px 5px 0px;
-	max-height: 15em;
-}
-.dropdown-el.expanded label {
-	border-top: 0.06em solid #d9d9d9;
-}
-.dropdown-el.expanded label:hover {
-	color: #3694d7;
-}
-.dropdown-el.expanded input:checked + label {
-	color: #3694d7;
-}
-.dropdown-el.expanded::after {
-	transform: rotate(-180deg);
-	top: 0.55em;
-}
-.influ-dropsec {
-	display: flex;
-	background: rgba(26, 97, 233, 0.1);
-	cursor: pointer;
-	border-radius: 70px;
-	align-items: center;
-	margin-left: 20px;
-	padding-right: 10px;
-}
-.influ-dropsec img {
-	@apply w-[70px] h-24;
-}
-.influ-vlog {
-	font-size: 60px;
-	border-radius: 50px;
-	line-height: 66px;
-	padding: 16px 10px 16px 32px;
-	cursor: pointer;
-	font-weight: 700;
-	color: #1a61e9;
-}
-.infludrop-btn {
-	padding: 4px 6px;
-	border-radius: 12px;
-	box-shadow: 4px 4px 20px 0 rgb(15 15 15 / 10%), 0 0 4px 0 rgb(51 35 77 / 5%);
-	background-color: #fff;
-	width: 312px;
-	margin-top: 4px;
-	position: absolute;
-	left: 30%;
-}
-#select0,
-#select1,
-#select2,
-#select3 {
-	font-size: 20px;
-	font-weight: 600;
-	padding-top: 8px;
-	padding-bottom: 8px;
-	padding-left: 12px;
-	cursor: pointer;
-}
-#select0:hover,
-#select1:hover,
-#select2:hover,
-#select3:hover {
-	padding: 8px 12px;
-	border-radius: 6px;
-	background-color: #fbe9d5;
 }
