--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -551,6 +551,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.visible {
+  visibility: visible;
+}
+
 .sticky {
   position: -webkit-sticky;
   position: sticky;
@@ -560,8 +564,16 @@ video {
   display: block;
 }
 
+.hidden {
+  display: none;
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.border {
+  border-width: 1px;
 }
 
 html,
@@ -680,10 +692,10 @@ select {
   border-width: 1px;
   border-style: solid;
   border-color: rgba(255,255,255,0.5);
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+  padding-top: 1.25rem;
+  padding-bottom: 0.125rem;
 }
 
 .profile-input span {
@@ -727,6 +739,19 @@ select {
 
 ::placeholder {
   color: rgba(255, 255, 255, 0.5);
+}
+
+.int-focu {
+  margin-left: -19px;
+  margin-right: -18px;
+  margin-top: -19px;
+  border-radius: 9999px;
+  border-style: solid;
+  --tw-border-opacity: 1;
+  border-color: rgb(15 15 15 / var(--tw-border-opacity));
+  padding-top: 18px;
+  padding-left: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 /* section 2 body */
@@ -805,7 +830,7 @@ select {
 
 .land-a {
   position: relative;
-  height: 660px;
+  height: 580px;
   width: 100%;
   overflow: auto;
 }
@@ -828,23 +853,80 @@ select {
   color: rgb(15 15 15 / var(--tw-text-opacity));
 }
 
-.land-a button {
-  margin-left: 0.75rem;
-  border-radius: 9999px;
+.influ-dropsec {
+  margin-left: 1.25rem;
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  border-radius: 70px;
   background-color: rgba(26,97,233,0.1);
+  padding-right: 0.625rem;
+}
+
+.influ-dropsec img {
+  height: 5rem;
+  width: 60px;
+}
+
+.influ-vlog {
+  cursor: pointer;
+  border-radius: 50px;
+  padding-right: 0.625rem;
   padding-left: 32px;
-  padding-right: 32px;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  font-size: 60px;
+  font-size: 30px;
   font-weight: 700;
-  line-height: 66px;
   --tw-text-opacity: 1;
   color: rgb(26 97 233 / var(--tw-text-opacity));
 }
 
+.infludrop-btn {
+  position: absolute;
+  left: 30%;
+  top: 88px;
+  margin-top: 0.25rem;
+  width: 312px;
+  border-radius: 12px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  padding-left: 0.375rem;
+  padding-right: 0.375rem;
+  --tw-shadow: 4px 4px 20px 0 rgb(15 15 15 / 10%), 0 0 4px 0 rgb(51 35 77 / 5%);
+  --tw-shadow-colored: 4px 4px 20px 0 var(--tw-shadow-color), 0 0 4px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+#select0, 
+#select1, 
+#select2, 
+#select3 {
+  cursor: pointer;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0.75rem;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 600;
+}
+
+#select0:hover, 
+#select1:hover, 
+#select2:hover, 
+#select3:hover {
+  border-radius: 6px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 233 213 / var(--tw-bg-opacity));
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .land-a p {
-  padding-top: 32px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 100px;
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 600;
@@ -865,6 +947,7 @@ select {
 .land-vloger img {
   z-index: 10;
   margin: auto;
+  height: 695px;
 }
 
 iframe.code {
@@ -940,6 +1023,7 @@ iframe.code {
 }
 
 .land-lin p {
+  max-width: 400px;
   padding-top: 7px;
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1056,8 +1140,6 @@ iframe.code {
 .range-slider {
   position: relative;
   margin-top: 15px;
-  display: flex;
-  align-items: center;
   gap: 24px;
 }
 
@@ -1065,6 +1147,14 @@ iframe.code {
   font-size: 18px;
   font-weight: 500;
   color: rgba(255,255,255,0.4);
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -10%;
+}
+
+.earn-m {
+  left: 102%;
 }
 
 #range {
@@ -1363,9 +1453,9 @@ iframe.code {
 }
 
 .flip-card-back p {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  font-weight: 400;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 500;
   --tw-text-opacity: 1;
   color: rgb(245 80 125 / var(--tw-text-opacity));
 }
@@ -1375,7 +1465,7 @@ iframe.code {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  font-size: 1.125rem;
+  font-size: 1.25rem;
   line-height: 1.75rem;
   font-weight: 700;
   --tw-text-opacity: 1;
@@ -1621,7 +1711,7 @@ iframe.code {
   background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  -webkit-animation: hue 10s infinite linear;
+  -webkit-animation: hue 4s infinite linear;
 }
 
 @-webkit-keyframes hue {
@@ -1859,239 +1949,4 @@ iframe.code {
 
 .land-a::-webkit-scrollbar-thumb:hover {
   background: #555;
-}
-
-.myDiv {
-  display: none;
-  text-align: center;
-}
-
-.myDiv img {
-  margin: 0 auto;
-}
-
-.myDiv span {
-  text-align: center;
-  background: #ffdede;
-  padding: 6px 10px;
-  display: block;
-  width: 100px;
-  border: 1px solid #d47c7c;
-  margin: 8px auto;
-}
-
-.selectParent {
-  margin-left: 0.75rem;
-  cursor: pointer;
-  border-radius: 9999px;
-  background-color: rgba(26,97,233,0.1);
-  padding-left: 32px;
-  padding-right: 32px;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  font-size: 60px;
-  font-weight: 700;
-  line-height: 66px;
-  --tw-text-opacity: 1;
-  color: rgb(26 97 233 / var(--tw-text-opacity));
-}
-
-.selectParent select {
-  text-indent: 1px;
-  text-overflow: "";
-  /* width: 100px; */
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  /* padding: 2px 2px 2px 2px;
-	border: none; */
-  background: transparent
-		url("http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png")
-		no-repeat 60px center;
-  outline: none;
-  background-position: calc(100% - 3px) center;
-  cursor: pointer;
-}
-
-option {
-  color: #0f0f0f;
-  font-size: 40px;
-  padding: 10px 11px 10px 11px;
-  border: 1px solid #dfe3eb;
-  border-radius: 10px;
-  font-weight: 500;
-  width: 100%;
-  cursor: pointer;
-}
-
-/* #showOne {
-	color: red;
-	border: 1px solid red;
-	padding: 10px;
-}
-#showTwo {
-	color: green;
-	border: 1px solid green;
-	padding: 10px;
-}
-#showThree {
-	color: blue;
-	border: 1px solid blue;
-	padding: 10px;
-} */
-
-.dropdown-el {
-  margin-top: 20vh;
-  min-width: 12em;
-  position: relative;
-  display: inline-block;
-  margin-right: 1em;
-  min-height: 2em;
-  max-height: 2em;
-  overflow: hidden;
-  top: 0.5em;
-  cursor: pointer;
-  text-align: left;
-  white-space: nowrap;
-  color: #444;
-  outline: none;
-  border: 0.06em solid transparent;
-  border-radius: 1em;
-  background-color: #cde4f5;
-  transition: 0.3s all ease-in-out;
-}
-
-.dropdown-el input:focus + label {
-  background: #def;
-}
-
-.dropdown-el input {
-  width: 1px;
-  height: 1px;
-  display: inline-block;
-  position: absolute;
-  opacity: 0.01;
-}
-
-.dropdown-el label {
-  border-top: 0.06em solid #d9d9d9;
-  display: block;
-  height: 2em;
-  line-height: 2em;
-  padding-left: 1em;
-  padding-right: 3em;
-  cursor: pointer;
-  position: relative;
-  transition: 0.3s color ease-in-out;
-}
-
-.dropdown-el label:nth-child(2) {
-  margin-top: 2em;
-  border-top: 0.06em solid #d9d9d9;
-}
-
-.dropdown-el input:checked + label {
-  display: block;
-  border-top: none;
-  position: absolute;
-  top: 0;
-  width: 100%;
-}
-
-.dropdown-el input:checked + label:nth-child(2) {
-  margin-top: 0;
-  position: relative;
-}
-
-.dropdown-el::after {
-  content: "";
-  position: absolute;
-  right: 0.8em;
-  top: 0.9em;
-  border: 0.3em solid #3694d7;
-  border-color: #3694d7 transparent transparent transparent;
-  transition: 0.4s all ease-in-out;
-}
-
-.dropdown-el.expanded {
-  border: 0.06em solid #3694d7;
-  background: #fff;
-  border-radius: 0.25em;
-  padding: 0;
-  box-shadow: rgba(0, 0, 0, 0.1) 3px 3px 5px 0px;
-  max-height: 15em;
-}
-
-.dropdown-el.expanded label {
-  border-top: 0.06em solid #d9d9d9;
-}
-
-.dropdown-el.expanded label:hover {
-  color: #3694d7;
-}
-
-.dropdown-el.expanded input:checked + label {
-  color: #3694d7;
-}
-
-.dropdown-el.expanded::after {
-  transform: rotate(-180deg);
-  top: 0.55em;
-}
-
-.influ-dropsec {
-  display: flex;
-  background: rgba(26, 97, 233, 0.1);
-  cursor: pointer;
-  border-radius: 70px;
-  align-items: center;
-  margin-left: 20px;
-  padding-right: 10px;
-}
-
-.influ-dropsec img {
-  height: 6rem;
-  width: 70px;
-}
-
-.influ-vlog {
-  font-size: 60px;
-  border-radius: 50px;
-  line-height: 66px;
-  padding: 16px 10px 16px 32px;
-  cursor: pointer;
-  font-weight: 700;
-  color: #1a61e9;
-}
-
-.infludrop-btn {
-  padding: 4px 6px;
-  border-radius: 12px;
-  box-shadow: 4px 4px 20px 0 rgb(15 15 15 / 10%), 0 0 4px 0 rgb(51 35 77 / 5%);
-  background-color: #fff;
-  width: 312px;
-  margin-top: 4px;
-  position: absolute;
-  left: 30%;
-}
-
-#select0,
-#select1,
-#select2,
-#select3 {
-  font-size: 20px;
-  font-weight: 600;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 12px;
-  cursor: pointer;
-}
-
-#select0:hover,
-#select1:hover,
-#select2:hover,
-#select3:hover {
-  padding: 8px 12px;
-  border-radius: 6px;
-  background-color: #fbe9d5;
 }
